@@ -40,12 +40,14 @@ import org.testng.annotations.BeforeMethod;
 import org.thingsboard.common.util.JacksonUtil;
 import org.thingsboard.server.common.data.Device;
 import org.thingsboard.server.common.data.EventInfo;
+import org.thingsboard.server.common.data.SecretType;
 import org.thingsboard.server.common.data.converter.Converter;
 import org.thingsboard.server.common.data.debug.DebugSettings;
 import org.thingsboard.server.common.data.event.EventType;
 import org.thingsboard.server.common.data.id.EntityId;
 import org.thingsboard.server.common.data.id.IntegrationId;
 import org.thingsboard.server.common.data.id.RuleChainId;
+import org.thingsboard.server.common.data.id.SecretId;
 import org.thingsboard.server.common.data.id.TenantId;
 import org.thingsboard.server.common.data.integration.Integration;
 import org.thingsboard.server.common.data.integration.IntegrationType;
@@ -56,6 +58,7 @@ import org.thingsboard.server.common.data.rule.NodeConnectionInfo;
 import org.thingsboard.server.common.data.rule.RuleChain;
 import org.thingsboard.server.common.data.rule.RuleChainMetaData;
 import org.thingsboard.server.common.data.rule.RuleNode;
+import org.thingsboard.server.common.data.secret.Secret;
 import org.thingsboard.server.msa.AbstractContainerTest;
 import org.thingsboard.server.msa.DisableUIListeners;
 
@@ -64,7 +67,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static org.thingsboard.server.msa.prototypes.ConverterPrototypes.downlinkConverterPrototype;
 import static org.thingsboard.server.msa.prototypes.ConverterPrototypes.uplinkConverterPrototype;
@@ -72,12 +74,43 @@ import static org.thingsboard.server.msa.prototypes.DevicePrototypes.defaultDevi
 
 @DisableUIListeners
 public abstract class AbstractIntegrationTest extends AbstractContainerTest {
+
     public static final String LOGIN = "tenant@thingsboard.org";
     public static final String PASSWORD = "tenant";
     protected Device device;
     private RuleChainId defaultRuleChainId;
     protected Integration integration;
     protected Converter uplinkConverter;
+    protected Secret secret;
+
+    protected final String JSON_CONVERTER_CONFIG = """
+            {
+                "isDevice": true,
+                "name": "DEVICE_NAME",
+                "profile": "default",
+                "customer": null,
+                "group": null,
+                "attributes": [
+                    "eui",
+                    "fPort",
+                    "rssi"
+                ],
+                "telemetry": [
+                    "data",
+                    "snr"
+                ],
+                "scriptLang": "TBEL",
+                "decoder": "",
+                "tbelDecoder": "var payloadStr = decodeToString(payload);\\nvar result = {\\n    attributes: {},\\n    telemetry: {\\n        ts: metadata.ts,\\n        values: {\\n            temperature: payload[0],\\n            humidity: payload[1]\\n        }\\n    }\\n};\\n\\nreturn result;",
+                "encoder": null,
+                "tbelEncoder": null,
+                "updateOnlyKeys": [
+                    "fPort",
+                    "eui",
+                    "rssi"
+                ]
+            }
+            """;
 
     abstract protected String getDevicePrototypeSufix();
 
@@ -104,6 +137,9 @@ public abstract class AbstractIntegrationTest extends AbstractContainerTest {
             if (integration.getDownlinkConverterId() != null) {
                 testRestClient.deleteConverter(integration.getDownlinkConverterId());
             }
+            if (secret.getId() != null) {
+                testRestClient.deleteSecret(secret.getId());
+            }
         }
     }
 
@@ -119,10 +155,15 @@ public abstract class AbstractIntegrationTest extends AbstractContainerTest {
 
     protected Integration createIntegration(IntegrationType type, JsonNode config, JsonNode uplinkConfig, JsonNode downlinkConfig,
                                             String routingKey, String secretKey, boolean isRemote) {
+        return createIntegration(type, config, uplinkConfig, downlinkConfig, routingKey, secretKey, isRemote, 1);
+    }
+
+    protected Integration createIntegration(IntegrationType type, JsonNode config, JsonNode uplinkConfig, JsonNode downlinkConfig,
+                                            String routingKey, String secretKey, boolean isRemote, int converterVersion) {
         Integration integration = new Integration();
         integration.setConfiguration(config);
 
-        uplinkConverter = testRestClient.postConverter(uplinkConverterPrototype(uplinkConfig));
+        uplinkConverter = testRestClient.postConverter(uplinkConverterPrototype(uplinkConfig, type, converterVersion));
         integration.setDefaultConverterId(uplinkConverter.getId());
 
         if (downlinkConfig != null) {
@@ -181,9 +222,8 @@ public abstract class AbstractIntegrationTest extends AbstractContainerTest {
                     }
 
                     List<EventInfo> eventInfos = events.getData().stream().filter(eventInfo ->
-                                    eventType.equals(eventInfo.getBody().get("event").asText()) &&
-                                            "true".equals(eventInfo.getBody().get("success").asText()))
-                            .collect(Collectors.toList());
+                            eventType.equals(eventInfo.getBody().get("event").asText()) &&
+                                    "true".equals(eventInfo.getBody().get("success").asText())).toList();
 
                     return eventInfos.size() == finalCount;
                 });
@@ -202,8 +242,7 @@ public abstract class AbstractIntegrationTest extends AbstractContainerTest {
                     }
 
                     List<EventInfo> eventInfos = events.getData().stream().filter(eventInfo ->
-                                    eventType.equalsIgnoreCase(eventInfo.getBody().get("type").asText()))
-                            .collect(Collectors.toList());
+                            eventType.equalsIgnoreCase(eventInfo.getBody().get("type").asText())).toList();
 
                     return eventInfos.size() == finalCount;
                 });
@@ -247,9 +286,8 @@ public abstract class AbstractIntegrationTest extends AbstractContainerTest {
                 .until(() -> {
                     PageData<EventInfo> events = testRestClient.getEvents(ruleChain.getId(), EventType.LC_EVENT, ruleChain.getTenantId(), new TimePageLink(1024));
                     List<EventInfo> eventInfos = events.getData().stream().filter(eventInfo ->
-                                    "UPDATED".equals(eventInfo.getBody().get("event").asText()) &&
-                                            "true".equals(eventInfo.getBody().get("success").asText()))
-                            .collect(Collectors.toList());
+                            "UPDATED".equals(eventInfo.getBody().get("event").asText()) &&
+                                    "true".equals(eventInfo.getBody().get("success").asText())).toList();
 
                     return eventInfos.size() == 4;
                 });
@@ -273,4 +311,19 @@ public abstract class AbstractIntegrationTest extends AbstractContainerTest {
                             && msgType.equals(event.getBody().get("msgType").asText());
                 });
     }
+
+    protected Secret createSecret(SecretId secretId, String name, String value) {
+        Secret secret = new Secret();
+        secret.setName(name);
+        secret.setValue(value);
+        secret.setType(SecretType.TEXT);
+        secret.setId(secretId);
+        this.secret = testRestClient.saveSecret(secret);
+        return this.secret;
+    }
+
+    protected String toSecretPlaceholder(String name, SecretType type) {
+        return String.format("${secret:%s;type:%s}", name, type);
+    }
+
 }
